--- a/app/views/checkins/_list.html.erb
+++ b/app/views/checkins/_list.html.erb
@@ -57,7 +57,7 @@ playSound('<%= root_path -%><%= flash[:sound] -%>');
   </tr>
 
 <%- @checkins.each_with_index do |checkin, i| -%>
-<%- if checkin.checkout.overdue? -%>
+<%- if checkin.checkout.try(:overdue?) -%>
   <tr class="line<%= cycle("2") -%>">
 <%- else -%>
   <tr class="line<%= cycle("0", "1") -%>">
