--- a/app/views/checkouts/edit.html.erb
+++ b/app/views/checkouts/edit.html.erb
@@ -5,12 +5,13 @@
   <%= render 'manifestations/title', :manifestation => @checkout.item.manifestation if @checkout.item -%>
 
 <h3><%= t('checkout.renewal') -%></h3>
-<%- if @checkout.checkout_renewable? -%>
+<%- if @checkout.checkout_renewable? || @renewed -%>
+  <%= t('checkout.extended') if @renewed %>
   <%= form_for(@checkout, :url => user_checkout_path(@checkout.user, @checkout)) do |f| -%>
     <%= t('checkout.new_due_date') -%>: <%= l(@renew_due_date, :format => :only_date) if @renew_due_date -%>
     <%= f.hidden_field :due_date, :value => @renew_due_date -%>
     <br />
-    <%= f.submit :disable_with => t('page.wait') %>
+    <%= f.submit :disable_with => t('page.wait') unless @renewed %>
   <%- end -%>
 <%- else -%>
   <div class="field"><%= t('checkout.this_item_cant_be_renewed') -%></div>
