--- a/app/views/checkouts/index.html.erb
+++ b/app/views/checkouts/index.html.erb
@@ -1,5 +1,5 @@
 <%- if @user -%>
-  <%= render 'index_user', :user => @user -%>
+  <%= render 'index_user', :user => @user, :basket_id => @basket_id -%>
 <%- else -%>
   <%- if params[:view] == 'overdue' -%>
     <%= render 'index_overdue' -%>
