--- a/app/views/checked_items/_list.html.erb
+++ b/app/views/checked_items/_list.html.erb
@@ -21,7 +21,7 @@
       <%- if SystemConfiguration.get("checked_items.disp_title") -%>
         <th class="checked_item_title"><%= t('page.title') -%></th>
       <%- end -%>
-      <th><%= t('activerecord.attributes.item.item_identifier') -%></th>
+      <th class="checked_item_identifier"><%= t('activerecord.attributes.item.item_identifier') -%></th>
       <th><%= t('activerecord.attributes.item.note') -%></th>
       <th><%= t('activerecord.attributes.checkout.due_date') -%></th>
       <th></th>
@@ -33,13 +33,15 @@
           <%- if SystemConfiguration.get("checked_items.disp_title") -%>
             <td><%= render 'manifestations/show_index', :manifestation => checked_item.item.manifestation -%></td>
           <%- end -%>
-          <td><%= link_to checked_item.item.item_identifier, checked_item.item -%>
+          <td><nobr><%= link_to checked_item.item.item_identifier, checked_item.item -%>
             <%- if checked_item.item.include_supplements -%>
               <br><%= t('activerecord.attributes.item.include_supplements') -%>
             <%- end -%>
-          </td>
-          <td><%= checked_item.item.note -%></td>
-          <td><%= c.text_field :due_date, :size => 10, :value => checked_item.due_date.strftime("%Y-%m-%d") -%></td>
+          </nobr></td>
+          <td><%= simple_format(checked_item.item.note) -%></td>
+          <td><nobr>
+            <%= c.date_select :due_date, :use_month_numbers => true -%>
+          </nobr></td>
           <td><%= link_to t('page.destroy'), user_basket_checked_item_path(checked_item.basket.user, checked_item.basket, checked_item), :confirm => t('page.are_you_sure'), :method => :delete -%></td>
         </tr>
       <%- end -%>
