--- a/app/views/checkins/_list.html.erb
+++ b/app/views/checkins/_list.html.erb
@@ -74,7 +74,7 @@ playSound('<%= root_path -%><%= flash[:sound] -%>');
         <span style="color: red"><%= link_to t('activerecord.models.inter_library_loan'), item_inter_library_loans_path(checkin.item) -%></span>
       <%- end -%>
     </td>
-    <td><%= checkin.item.note -%></td>
+    <td><%= simple_format(checkin.item.note) -%></td>
     <td>
       <%- if checkin.checkout -%>
         <%= l(checkin.checkout.due_date, :format => :only_date) -%>
