--- a/app/views/checkouts/edit.html.erb
+++ b/app/views/checkouts/edit.html.erb
@@ -8,7 +8,7 @@
 <%- if @checkout.checkout_renewable? || @renewed -%>
   <%= t('checkout.extended') if @renewed %>
   <%= form_for(@checkout, :url => user_checkout_path(@checkout.user, @checkout)) do |f| -%>
-    <%= t('checkout.new_due_date') -%>: <%= l(@renew_due_date, :format => :only_date) if @renew_due_date -%>
+    <%= t('checkout.new_due_date') -%>: <%= l(@checkout.due_date, :format => :only_date) -%>
     <%= f.hidden_field :due_date, :value => @renew_due_date -%>
     <br />
     <%= f.submit :disable_with => t('page.wait') unless @renewed %>
