refs 4081 modified validation and the method to check reneable

--- a/app/views/checkouts/_list.html.erb
+++ b/app/views/checkouts/_list.html.erb
@@ -23,9 +23,9 @@
     <td><%= l(checkout.due_date, :format => :only_date) -%></td>
     <td><%= checkout.checkout_renewal_count -%></td>
     <td>
-      <%= link_to t('page.show'), user_checkout_path(checkout.user, checkout) -%>
+      <nobr><%= link_to t('page.show'), user_checkout_path(checkout.user, checkout) -%></nobr>
       <br />
-      <%- if can? :update, checkout -%>
+      <%- if (can? :update, checkout) && (current_user.has_role?('Librarian') || checkout.checkout_renewable?) -%> 
         <%# = link_to t('checkout.extend'), edit_user_checkout_path(checkout.user, checkout) -%>
         <%= link_to t('checkout.extend'), extend_checkout_checkouts_path(:checkout => {:item_identifier => checkout.item.item_identifier}), :method => :post -%>
       <%- end -%>
