--- a/app/views/checkouts/edit.html.erb
+++ b/app/views/checkouts/edit.html.erb
@@ -1,3 +1,9 @@
+<%- if flash[:sound] -%>
+<script>
+  playSound('<%= root_path -%><%= flash[:sound] -%>');
+</script>
+<%- end -%>
+
 <div id="content_detail" class="ui-corner-all">
 <h1 class="title"><%= t('page.editing', :model => t('activerecord.models.checkout')) -%></h1>
 <div id="content_list">
@@ -5,6 +11,7 @@
   <%= render 'manifestations/title', :manifestation => @checkout.item.manifestation if @checkout.item -%>
 
 <h3><%= t('checkout.renewal') -%></h3>
+<div style="color: red"><%= raw flash[:message] -%></div>
 <%- if @checkout.checkout_renewable? || @renewed -%>
   <%= t('checkout.extended') if @renewed %>
   <%= form_for(@checkout, :url => user_checkout_path(@checkout.user, @checkout)) do |f| -%>
