--- a/app/views/reserves/_search_and_output.html.erb
+++ b/app/views/reserves/_search_and_output.html.erb
@@ -1,5 +1,8 @@
 <script>
   $(document).ready(function() {
+    if (typeof $('#birth_date').setCalendar == "function") {
+      $('#birth_date').setCalendar({src:'/assets/calendar.png'});
+    }
     // checked
      var $tgt_parent = $("input.check-parent");
      var $tgt_child = $("input.check-child");
