--- a/app/views/reserves/_new_user.html.erb
+++ b/app/views/reserves/_new_user.html.erb
@@ -27,6 +27,11 @@
     <%= f.select(:receipt_library_id, @libraries.collect{|l| [l.display_name.localize, l.id]}) -%>
   </div>
   <div class="field">
+<script>
+    if (typeof $('#expired_at').setCalendar == "function") {
+      $('#expired_at').setCalendar({src:'/assets/calendar.png'});
+    }
+</script>
     <%= f.label :expired_at -%><br />
     <%= f.text_field :expired_at, :value => @reserve.expired_at.try(:strftime, "%Y-%m-%d"), :class => 'date_field', :placeholder => "#{t('page.example')}: 2011-04-12"-%>
   </div>
