--- a/app/views/reserves/_search_and_output.html.erb
+++ b/app/views/reserves/_search_and_output.html.erb
@@ -73,6 +73,7 @@
     <%= submit_tag t('page.search'), :onclick => "push_submit(null);" %>
     <%= submit_tag t('page.output_pdf', :model => (t('page.listing', :model => t('activerecord.models.reserve')))), :onclick => "push_submit('pdf');" %>
     <%= submit_tag t('page.output_tsv', :model => (t('page.listing', :model => t('activerecord.models.reserve')))), :onclick => "push_submit('tsv');" %>
+    <%- if @picking %><%= submit_tag t('page.output_pdf', :model => t('reserve.picking_list')), :name => 'picking' %><%- end -%>
   </div>
 <%- end -%>
 
