--- a/app/views/baskets/new.html.erb
+++ b/app/views/baskets/new.html.erb
@@ -6,7 +6,7 @@
   <%= f.error_messages -%>
   <div class="field">
     <%= f.label t('activerecord.attributes.user.user_number') -%>
-    <%= f.text_field :user_number, :class => 'resource_user_number' -%>
+    <%= f.text_field :user_number, :class => 'resource_user_number', :style => 'ime-mode:disabled' -%>
 
   <!--
   <div class="field">
