--- a/app/views/checkins/_list.html.erb
+++ b/app/views/checkins/_list.html.erb
@@ -40,7 +40,7 @@ playSound('<%= root_path -%><%= flash[:sound] -%>');
 <%= form_for @checkin, :html => {:method => :post}, :url => user_basket_checkins_path(@basket.user, @basket, :mode => 'list'), :remote => true do |f| -%>
 
   <p><%= t('activerecord.attributes.item.item_identifier') -%>:
-    <%= f.text_field :item_identifier, :class => 'resource_item_identifier' -%>
+    <%= f.text_field :item_identifier, :class => 'resource_item_identifier', :style => 'ime-mode:disabled' -%>
     <%= f.hidden_field :librarian_id, :value => current_user.id -%>
     <%= submit_tag t('checkin.checkin'), :disable_with => t('page.wait') -%></p>
 <%- end -%>
