--- a/app/views/checkins/_list.html.erb
+++ b/app/views/checkins/_list.html.erb
@@ -70,7 +70,7 @@ playSound('<%= root_path -%><%= flash[:sound] -%>');
     <td>
       <%= link_to checkin.item.item_identifier, checkin.item -%>
       <br />
-      <%- unless checkin.item.shelf.library == current_user.library -%>
+      <%- unless checkin.item.shelf.library.id == current_user.library.id -%>
         <span style="color: red"><%= link_to t('activerecord.models.inter_library_loan'), item_inter_library_loans_path(checkin.item) -%></span>
       <%- end -%>
     </td>
