--- a/app/views/checkouts/extend.html.erb
+++ b/app/views/checkouts/extend.html.erb
@@ -11,7 +11,7 @@
     <%= f.submit t('page.read') -%>
   </div>
 <%- end -%>
-<%= javascript_tag("$('#item_identifier').focus()") -%>
+<%= javascript_tag("$('#checkout_item_identifier').focus()") -%>
 </div>
 </div>
 
