refs 4682 create submenu to extend checkout

--- a/app/views/baskets/new.html.erb
+++ b/app/views/baskets/new.html.erb
@@ -23,6 +23,7 @@
 
 <div id="submenu" class="ui-corner-all">
   <ul>
+    <li><%= link_to t('checkout.renew_checkout'), extend_checkouts_path -%></li>
     <li><%= link_to t('activerecord.models.checkin'), checkins_path -%></li>
     <li><%= link_to t('page.search_resource', :model => t('activerecord.models.user')), users_path -%></li>
   </ul>
