--- a/app/views/reserves/edit.html.erb
+++ b/app/views/reserves/edit.html.erb
@@ -2,6 +2,12 @@
 <h1 class="title"><%= t('page.editing', :model => t('activerecord.models.reserve')) -%></h1>
 <div id="content_list">
 
+<script>
+$(function(){
+  $('#reserve_expired_at').setCalendar({src:'/assets/calendar.png'});
+});
+</script>
+
 <%= form_for(@reserve, :url => user_reserve_path(@reserve.user, @reserve)) do |f| -%>
   <%= f.error_messages -%>
 
