refs 4652 add calendar input helper

--- a/app/views/reserves/_new.html.erb
+++ b/app/views/reserves/_new.html.erb
@@ -1,7 +1,7 @@
 <script>
   $(document).ready(function() {
     if (typeof $('#expired_at').setCalendar == "function") {
-      $('#expired_at').setCalendar({src:'/assets/calendar.png'});
+      $('#reserve_expired_at').setCalendar({src:'/assets/calendar.png'});
     }
     // onload
     if ($("#reserve_user_number").val().length != 0) {
