--- a/app/views/reserves/_new_user.html.erb
+++ b/app/views/reserves/_new_user.html.erb
@@ -1,3 +1,9 @@
+<script>
+$(function(){
+  $('#reserve_expired_at').setCalendar({src:'/assets/calendar.png'});
+});
+</script>
+
 <div id="content_detail" class="ui-corner-all">
 <h1 class="title"><%= t('page.new', :model => t('activerecord.models.reserve')) -%></h1>
 <div id="content_list">
