--- a/app/views/checkouts/extend.html.erb
+++ b/app/views/checkouts/extend.html.erb
@@ -1,7 +1,7 @@
 <div id="content_detail" class="ui-corner-all">
 <h1 class="title"><%= t('checkout.extend') -%></h1>
 <div id="content_list">
-
+<div style="color: red"><%= raw flash[:message] -%></div>
 <%= form_for(@checkout, :url => {:controller => 'checkouts', :action => 'extend_checkout'}) do |f| -%>
   <%= f.error_messages -%>
   <div class="field">
