--- a/app/views/checked_items/_list.html.erb
+++ b/app/views/checked_items/_list.html.erb
@@ -14,6 +14,7 @@
     <%= f.submit t('page.read'), :disable_with => t('page.wait') -%>
   </p>
   <%= t('activerecord.attributes.checkout.checked_at') -%>: <%= f.date_select :checked_at, :use_month_numbers => true -%>
+  &nbsp;<%= f.select :loan_period, CheckedItem::LOAN_PERIODS.call %>
 <%- end -%>
 <%= javascript_tag("$('#checked_item_item_identifier').focus()") -%>
 <%= form_for(:basket, :url => {:controller => 'baskets', :action => 'update', :id => @basket.id}, :html => { :method => :put }) do |f| -%>
