--- a/app/views/reserves/_title.html.erb
+++ b/app/views/reserves/_title.html.erb
@@ -14,13 +14,13 @@
     <%- end -%>
     <br />
     <%- if reserve.manifestation.creators.readable_by(current_user).exists? -%>
-      <%= t('patron.creator') -%>: <%= patrons_list(reserve.manifestation.creators.readable_by(current_user)) -%>
+      <%= t('patron.creator') -%>: <%= patrons_list(reserve.manifestation.creators.readable_by(current_user)), {:itemprop => 'author'}, reserve.manifestation.id, 'create') -%>
     <%- end -%>
     <%- if reserve.manifestation.contributors.readable_by(current_user).exists? -%>
-      <%= t('patron.contributor') -%>: <%= patrons_list(reserve.manifestation.contributors.readable_by(current_user)) -%>
+      <%= t('patron.contributor') -%>: <%= patrons_list(reserve.manifestation.contributors.readable_by(current_user)), {:itemprop => 'editor'}, manifestation.id, 'realize') -%>
     <%- end -%>
     <%- if reserve.manifestation.publishers.readable_by(current_user).exists? -%>
-      <%= t('patron.publisher') -%>: <%= patrons_list(reserve.manifestation.publishers.readable_by(current_user)) -%>
+      <%= t('patron.publisher') -%>: <%= patrons_list(reserve.manifestation.publishers.readable_by(current_user)), {:itemprop => 'publisher'}, manifestation.id, 'produce') -%>
       <%- if reserve.manifestation.pub_date.present? -%>
         (<%= reserve.manifestation.pub_date -%>)
       <%- end -%>
