--- a/app/views/reserves/_title.html.erb
+++ b/app/views/reserves/_title.html.erb
@@ -30,6 +30,6 @@
     <%- end -%>
     <%- unless reserve.manifestation.access_address.blank? -%>
       <br />
-      <%= link_to reserve.manifestation.access_address, manifestation.access_address -%>
+      <%= link_to reserve.manifestation.access_address, reserve.manifestation.access_address -%>
       <%= link_to image_tag('icons/world_go.png', :size => '16x16', :alt => ('Web'), :title => ('tooltip.web')), reserve.manifestation.access_address -%>
     <%- end -%>
