延長処理の修正

--- a/app/views/checkouts/edit.html.erb
+++ b/app/views/checkouts/edit.html.erb
@@ -7,6 +7,7 @@
 <div id="content_detail" class="ui-corner-all">
 <h1 class="title"><%= t('page.editing', :model => t('activerecord.models.checkout')) -%></h1>
 <div id="content_list">
+<p id="notice"><%= notice %></p>
 
   <%= render 'manifestations/title', :manifestation => @checkout.item.manifestation if @checkout.item -%>
 
