refs 6518 rename Patron model to Agent

--- a/app/views/checked_items/_user_comment.html.erb
+++ b/app/views/checked_items/_user_comment.html.erb
@@ -1,23 +1,23 @@
-<%- if @basket.user.patron and  @basket.user.patron.note -%>
+<%- if @basket.user.agent and  @basket.user.agent.note -%>
   <div id="user_comment">
     <strong><%= t('activerecord.attributes.checked_item.user_comment') -%>:</strong><br />
-    <%= @basket.user.patron.note -%>
+    <%= @basket.user.agent.note -%>
   </div>
 <%- end -%>
-<%- if @basket.user.patron -%>
-  <%- if can? :edit, @basket.user.patron-%>
+<%- if @basket.user.agent -%>
+  <%- if can? :edit, @basket.user.agent-%>
     <div><%= link_to_function t('activerecord.attributes.checked_item.edit_user_comment'), "$('#comment').toggle()" -%></div>
     <div id="comment" style="display: none">
-      <%= form_for(@basket.user.patron) do |f| -%>
+      <%= form_for(@basket.user.agent) do |f| -%>
         <div class="field">
           <%= f.label :note -%>
-            <%- if @basket.user.patron.note_update_at -%>
-              &nbsp;<%= t('patron.last_update_at') -%>: <%= l(@basket.user.patron.note_update_at) -%>
-            <%- if @basket.user.patron.note_update_by -%>
-              &nbsp;<%= t('patron.last_update_by') -%>: <%= @basket.user.patron.note_update_by -%>
+            <%- if @basket.user.agent.note_update_at -%>
+              &nbsp;<%= t('agent.last_update_at') -%>: <%= l(@basket.user.agent.note_update_at) -%>
+            <%- if @basket.user.agent.note_update_by -%>
+              &nbsp;<%= t('agent.last_update_by') -%>: <%= @basket.user.agent.note_update_by -%>
             <%- end -%>
-            <%- if @basket.user.patron.note_update_library -%>
-              (<%= @basket.user.patron.note_update_library-%>)
+            <%- if @basket.user.agent.note_update_library -%>
+              (<%= @basket.user.agent.note_update_library-%>)
             <%- end -%>
           <%- end -%>
           <br />
