--- a/app/views/reserves/show.html.erb
+++ b/app/views/reserves/show.html.erb
@@ -19,16 +19,16 @@
   (<%= @reserve.user.user_number %>)
 </p>
 
-<%- if @reserve.user && @reserve.user.patron -%> 
+<%- if @reserve.user && @reserve.user.agent -%> 
 <p>
   <strong><%= t('activerecord.attributes.reserve.contact') -%>:</strong>
-  <%= link_to @reserve.user.patron.full_name, @reserve.user -%> <%= @reserve.user.patron.email -%></br>
-  <%- unless @reserve.user.patron.address_1.blank? -%>
-    <%- unless @reserve.user.patron.zip_code_1.blank? -%><%= t('activerecord.attributes.reserve.zipcode') -%><%= @reserve.user.patron.zip_code_1 -%><br /><%- end -%>
-    <%= @reserve.user.patron.address_1 -%><br />
+  <%= link_to @reserve.user.agent.full_name, @reserve.user -%> <%= @reserve.user.agent.email -%></br>
+  <%- unless @reserve.user.agent.address_1.blank? -%>
+    <%- unless @reserve.user.agent.zip_code_1.blank? -%><%= t('activerecord.attributes.reserve.zipcode') -%><%= @reserve.user.agent.zip_code_1 -%><br /><%- end -%>
+    <%= @reserve.user.agent.address_1 -%><br />
   <%- end -%>
-  <%- unless @reserve.user.patron.telephone_number_1.blank? -%>
-    <%= t('activerecord.attributes.patron.telephone_number') -%>: <%= @reserve.user.patron.telephone_number_1 -%>
+  <%- unless @reserve.user.agent.telephone_number_1.blank? -%>
+    <%= t('activerecord.attributes.agent.telephone_number') -%>: <%= @reserve.user.agent.telephone_number_1 -%>
   <%- end -%>
 </p>
 <%- end -%>
