--- a/app/views/retained_manifestations/index.html.erb
+++ b/app/views/retained_manifestations/index.html.erb
@@ -46,7 +46,7 @@
   <tr class="line<%= cycle("0", "1") %>">
     <td>
       <%= link_to reserve.user.username, reserve.user if reserve.user %><br />
-      <%= link_to reserve.user.patron.full_name, reserve.user if reserve.user.patron %>
+      <%= link_to reserve.user.agent.full_name, reserve.user if reserve.user.agent %>
     </td>
     <td><%= render 'reserves/title', :reserve => reserve -%></td>
     <td>
